--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,5 +28,5 @@ jobs:
             - name: Publish distribution to PyPI
               uses: pypa/gh-action-pypi-publish@release/v1
               with:
-                password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+                password: ${{ secrets.PYPI_API_TOKEN }}
                 repository-url: https://upload.pypi.org/legacy/
