added a new function-"create_key_pair" to EC2Manager

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -2,6 +2,8 @@ name: Publish EC2S3Wrapper to PyPI
 
 on:
   workflow_dispatch:
+  push: 
+    branches: ['main']
 
 jobs:
     python-build-n-publish:
